Wrap very long words/URLs in posts to avoid layout breakage

--- a/src/style/Textpattern/sass/modules/fluxbb/_layout.scss
+++ b/src/style/Textpattern/sass/modules/fluxbb/_layout.scss
@@ -447,6 +447,8 @@ thead th {
 
 /* post author message section */
 .postright {
+    @include force-wrap;
+
     float: right;
     padding: 0 2.8%;
     width: 63%;
